3 endpoint for stat added
